// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress render format 1`] = `
<div
  class="infini-progress infini-progress-line infini-progress-status-normal infini-progress-show-info infini-progress-default"
>
  <div>
    <div
      class="infini-progress-outer"
    >
      <div
        class="infini-progress-inner"
      >
        <div
          class="infini-progress-bg"
          style="width: 50%; height: 8px; border-radius: 100px;"
        />
        <div
          class="infini-progress-success-bg"
          style="width: 10%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="infini-progress-text"
      title="50 10"
    >
      50 10
    </span>
  </div>
</div>
`;

exports[`Progress render negetive progress 1`] = `
<div
  class="infini-progress infini-progress-line infini-progress-status-normal infini-progress-show-info infini-progress-default"
>
  <div>
    <div
      class="infini-progress-outer"
    >
      <div
        class="infini-progress-inner"
      >
        <div
          class="infini-progress-bg"
          style="width: 0%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="infini-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render negetive successPercent 1`] = `
<div
  class="infini-progress infini-progress-line infini-progress-status-normal infini-progress-show-info infini-progress-default"
>
  <div>
    <div
      class="infini-progress-outer"
    >
      <div
        class="infini-progress-inner"
      >
        <div
          class="infini-progress-bg"
          style="width: 50%; height: 8px; border-radius: 100px;"
        />
        <div
          class="infini-progress-success-bg"
          style="width: 0%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="infini-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render normal progress 1`] = `
<div
  class="infini-progress infini-progress-line infini-progress-status-normal infini-progress-show-info infini-progress-default"
>
  <div>
    <div
      class="infini-progress-outer"
    >
      <div
        class="infini-progress-inner"
      >
        <div
          class="infini-progress-bg"
          style="width: 0%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="infini-progress-text"
      title="0%"
    >
      0%
    </span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress 1`] = `
<div
  class="infini-progress infini-progress-line infini-progress-status-success infini-progress-show-info infini-progress-default"
>
  <div>
    <div
      class="infini-progress-outer"
    >
      <div
        class="infini-progress-inner"
      >
        <div
          class="infini-progress-bg"
          style="width: 100%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="infini-progress-text"
    >
      <i
        aria-label="icon: check-circle"
        class="anticon anticon-check-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 0 1-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`Progress render out-of-range progress with info 1`] = `
<div
  class="infini-progress infini-progress-line infini-progress-status-success infini-progress-show-info infini-progress-default"
>
  <div>
    <div
      class="infini-progress-outer"
    >
      <div
        class="infini-progress-inner"
      >
        <div
          class="infini-progress-bg"
          style="width: 100%; height: 8px; border-radius: 100px;"
        />
      </div>
    </div>
    <span
      class="infini-progress-text"
    >
      <i
        aria-label="icon: check-circle"
        class="anticon anticon-check-circle"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 0 1-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
          />
        </svg>
      </i>
    </span>
  </div>
</div>
`;

exports[`Progress render strokeColor 1`] = `
<div
  class="infini-progress infini-progress-circle infini-progress-status-normal infini-progress-show-info infini-progress-default"
>
  <div
    class="infini-progress-inner"
    style="width: 120px; height: 120px; font-size: 24px;"
  >
    <svg
      class="infini-progress-circle "
      viewBox="0 0 100 100"
    >
      <path
        class="infini-progress-circle-trail"
        d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke="#f3f3f3"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: #f3f3f3; stroke-dasharray: 295.3097094374406px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s;"
      />
      <path
        class="infini-progress-circle-path"
        d="M 50,50 m 0,-47
     a 47,47 0 1 1 0,94
     a 47,47 0 1 1 0,-94"
        fill-opacity="0"
        stroke-linecap="round"
        stroke-width="6"
        style="stroke: red; stroke-dasharray: 147.6548547187203px 295.3097094374406px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s;"
      />
    </svg>
    <span
      class="infini-progress-text"
      title="50%"
    >
      50%
    </span>
  </div>
</div>
`;

exports[`Progress render strokeColor 2`] = `
<Progress
  gapDegree={0}
  percent={50}
  showInfo={true}
  size="default"
  strokeColor={
    Object {
      "from": "#108ee9",
      "to": "#87d068",
    }
  }
  strokeLinecap="round"
  trailColor="#f3f3f3"
  type="line"
>
  <div
    className="infini-progress infini-progress-line infini-progress-status-normal infini-progress-show-info infini-progress-default"
  >
    <Line
      gapDegree={0}
      percent={50}
      prefixCls="infini-progress"
      showInfo={true}
      size="default"
      strokeColor={
        Object {
          "from": "#108ee9",
          "to": "#87d068",
        }
      }
      strokeLinecap="round"
      trailColor="#f3f3f3"
      type="line"
    >
      <div>
        <div
          className="infini-progress-outer"
        >
          <div
            className="infini-progress-inner"
          >
            <div
              className="infini-progress-bg"
              style={
                Object {
                  "backgroundImage": "linear-gradient(to right, #108ee9, #87d068)",
                  "borderRadius": "100px",
                  "height": 8,
                  "width": "50%",
                }
              }
            />
          </div>
        </div>
        <span
          className="infini-progress-text"
          title="50%"
        >
          50%
        </span>
      </div>
    </Line>
  </div>
</Progress>
`;

exports[`Progress render strokeColor 3`] = `
<Progress
  gapDegree={0}
  percent={50}
  showInfo={true}
  size="default"
  strokeColor={
    Object {
      "0%": "#108ee9",
      "100%": "#87d068",
    }
  }
  strokeLinecap="round"
  trailColor="#f3f3f3"
  type="line"
>
  <div
    className="infini-progress infini-progress-line infini-progress-status-normal infini-progress-show-info infini-progress-default"
  >
    <Line
      gapDegree={0}
      percent={50}
      prefixCls="infini-progress"
      showInfo={true}
      size="default"
      strokeColor={
        Object {
          "0%": "#108ee9",
          "100%": "#87d068",
        }
      }
      strokeLinecap="round"
      trailColor="#f3f3f3"
      type="line"
    >
      <div>
        <div
          className="infini-progress-outer"
        >
          <div
            className="infini-progress-inner"
          >
            <div
              className="infini-progress-bg"
              style={
                Object {
                  "backgroundImage": "linear-gradient(to right, #108ee9 0%, #87d068 100%)",
                  "borderRadius": "100px",
                  "height": 8,
                  "width": "50%",
                }
              }
            />
          </div>
        </div>
        <span
          className="infini-progress-text"
          title="50%"
        >
          50%
        </span>
      </div>
    </Line>
  </div>
</Progress>
`;
